tests/sksl/errors/SwizzleOutOfBounds.dsl.glsl
### Compilation failed:

error: invalid swizzle mask

1 error
